--- a/index.html
+++ b/index.html
@@ -446,14 +446,13 @@
         <h2>Sobre Mí</h2>
         <div class="about-content">
             <div class="profile-section">
-                <img src="https://cdn.jsdelivr.net/gh/user-attachments/assets/PLACEHOLDER" alt="Joshua Miranda" class="profile-image" id="profileImg">
+                <img src="IMG_8356.JPG" alt="Joshua Miranda" class="profile-image">
                 <div class="about-text">
                     <p>Ingeniero en Software y Redes con formación sólida en desarrollo de software, infraestructura tecnológica, electrónica y seguridad informática. Actualmente cursando una Maestría en Seguridad de Tecnologías de la Información en la Universidad Tecnológica de México (UNITEC).</p>
                     <p style="margin-top: 1rem;">Mi experiencia práctica abarca programación, redes, proyectos con Arduino y desarrollo de aplicaciones. Me apasiona la ciberseguridad, IoT y el desarrollo de software innovador que contribuya a la transformación tecnológica de las organizaciones.</p>
                 </div>
             </div>
             <div>
-                
                 <div class="education">
                     <h3>🎓 Formación Académica</h3>
                     <div class="education-item">
@@ -465,32 +464,32 @@
                         <span>Universidad Tecnológica de México (UNITEC) | 2025</span>
                     </div>
                 </div>
-            </div>
 
-            <div class="skills">
-                <div class="skill">
-                    <strong>💻 Programación</strong>
-                    <p>Python, Flutter/Dart, Java, C/C++, SQL</p>
-                </div>
-                <div class="skill">
-                    <strong>🔧 Electrónica y Hardware</strong>
-                    <p>Arduino, Sensores, Automatización, IoT</p>
-                </div>
-                <div class="skill">
-                    <strong>🌐 Redes y Seguridad</strong>
-                    <p>Configuración, Administración, Ciberseguridad</p>
-                </div>
-                <div class="skill">
-                    <strong>🛡️ Ciberseguridad</strong>
-                    <p>Análisis de Vulnerabilidades, Auditoría SI</p>
-                </div>
-                <div class="skill">
-                    <strong>☁️ Cloud & DevOps</strong>
-                    <p>Firebase, Docker, Virtualización</p>
-                </div>
-                <div class="skill">
-                    <strong>🛠️ Herramientas</strong>
-                    <p>Git, Tkinter, OpenCV, Docker</p>
+                <div class="skills" style="margin-top: 2rem;">
+                    <div class="skill">
+                        <strong>💻 Programación</strong>
+                        <p>Python, Flutter/Dart, Java, C/C++, SQL</p>
+                    </div>
+                    <div class="skill">
+                        <strong>🔧 Electrónica y Hardware</strong>
+                        <p>Arduino, Sensores, Automatización, IoT</p>
+                    </div>
+                    <div class="skill">
+                        <strong>🌐 Redes y Seguridad</strong>
+                        <p>Configuración, Administración, Ciberseguridad</p>
+                    </div>
+                    <div class="skill">
+                        <strong>🛡️ Ciberseguridad</strong>
+                        <p>Análisis de Vulnerabilidades, Auditoría SI</p>
+                    </div>
+                    <div class="skill">
+                        <strong>☁️ Cloud & DevOps</strong>
+                        <p>Firebase, Docker, Virtualización</p>
+                    </div>
+                    <div class="skill">
+                        <strong>🛠️ Herramientas</strong>
+                        <p>Git, Tkinter, OpenCV, Docker</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -634,8 +633,8 @@
 
         <div class="contact-links">
             <a href="mailto:joshck89@gmail.com" class="contact-link">📧 Enviar Email</a>
-            <a href="https://wa.me/528568836586" target="_blank" class="contact-link">💬 WhatsApp</a>
-            <a href="tel:5661334454" class="contact-link">📞 Llamar</a>
+            <a href="https://wa.me/5215568836586" target="_blank" class="contact-link">💬 WhatsApp</a>
+            <a href="tel:+525661334454" class="contact-link">📞 Llamar</a>
         </div>
     </section>
 
@@ -646,12 +645,6 @@
     </footer>
 
     <script>
-        // Load profile image from uploaded file
-        const profileImg = document.getElementById('profileImg');
-        // You'll need to replace this with the actual path to your uploaded image
-        // For now, using a data URL from the uploaded image
-        profileImg.src = 'data:image/jpeg;base64,/9j/4AAQSkZJRg...'; // This will be replaced with actual image data
-        
         // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
