--- a/index.html
+++ b/index.html
@@ -514,17 +514,18 @@
         <h2>Proyectos Destacados</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <div class="project-image">🎵</div>
-                <div class="project-content">
-                    <h3>Reproductor de Audio Inteligente</h3>
-                    <p>Aplicación con interfaz gráfica que incluye lista de canciones con scroll, controles de reproducción, barra de progreso animada e interacción con metadatos musicales.</p>
-                    <div class="project-tags">
-                        <span class="tag">Python</span>
-                        <span class="tag">Tkinter</span>
-                        <span class="tag">Pygame</span>
-                    </div>
-                </div>
-            </div>
+    <div class="project-image">🎵</div>
+    <div class="project-content">
+        <h3>Reproductor de Audio Inteligente</h3>
+        <p>Aplicación con interfaz gráfica que incluye lista de canciones con scroll, controles de reproducción, barra de progreso animada e interacción con metadatos musicales.</p>
+        <div class="project-tags">
+            <span class="tag">Python</span>
+            <span class="tag">Tkinter</span>
+            <span class="tag">Pygame</span>
+        </div>
+        <a href="https://github.com/joshck091/reproductor-audio-python" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #667eea; color: white; text-decoration: none; border-radius: 5px; font-weight: 600;">📂 Ver en GitHub</a>
+    </div>
+</div>
 
             <div class="project-card">
                 <div class="project-image">📄</div>
