--- a/index.html
+++ b/index.html
@@ -465,6 +465,17 @@
                     </div>
                 </div>
 
+                <div class="education" style="margin-top: 2rem;">
+                    <h3>🏆 Certificaciones</h3>
+                    <div class="education-item">
+                        <strong>CCNA: Redes Empresariales, Seguridad y Automatización</strong>
+                        <span>Cisco Networking Academy | 2025</span>
+                        <p style="margin-top: 0.5rem; color: #555; font-size: 0.9rem; line-height: 1.5;">
+                            Certificación en arquitecturas de red escalables, enrutamiento dinámico, mitigación de amenazas de seguridad, redes WAN, virtualización y automatización de redes programables. Incluye 41 actividades de laboratorio y 15 horas de práctica con hardware Cisco y Cisco Packet Tracer.
+                        </p>
+                    </div>
+                </div>
+
                 <div class="skills" style="margin-top: 2rem;">
                     <div class="skill">
                         <strong>💻 Programación</strong>
@@ -514,18 +525,18 @@
         <h2>Proyectos Destacados</h2>
         <div class="projects-grid">
             <div class="project-card">
-    <div class="project-image">🎵</div>
-    <div class="project-content">
-        <h3>Reproductor de Audio Inteligente</h3>
-        <p>Aplicación con interfaz gráfica que incluye lista de canciones con scroll, controles de reproducción, barra de progreso animada e interacción con metadatos musicales.</p>
-        <div class="project-tags">
-            <span class="tag">Python</span>
-            <span class="tag">Tkinter</span>
-            <span class="tag">Pygame</span>
-        </div>
-        <a href="https://github.com/joshck091/reproductor-audio-python" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #667eea; color: white; text-decoration: none; border-radius: 5px; font-weight: 600;">📂 Ver en GitHub</a>
-    </div>
-</div>
+                <div class="project-image">🎵</div>
+                <div class="project-content">
+                    <h3>Reproductor de Audio Inteligente</h3>
+                    <p>Aplicación con interfaz gráfica que incluye lista de canciones con scroll, controles de reproducción, barra de progreso animada e interacción con metadatos musicales.</p>
+                    <div class="project-tags">
+                        <span class="tag">Python</span>
+                        <span class="tag">Tkinter</span>
+                        <span class="tag">Pygame</span>
+                    </div>
+                    <a href="https://github.com/joshck091/reproductor-audio-python" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #667eea; color: white; text-decoration: none; border-radius: 5px; font-weight: 600;">📂 Ver en GitHub</a>
+                </div>
+            </div>
 
             <div class="project-card">
                 <div class="project-image">📄</div>
